11 August 2006: Wouter
	- srandom to init random() in xfrd based on PID and time.

10 August 2006: Wouter
	- added more tests to increase code coverage of testset.
	- moved acl parsing code from configparser.c to options.c to help
	  unit testing.
	- nsd-checkconf echod wrong difffile filename with -v.
	- nsd-patch can now be used with -f to force printing of all RRs.
	- TYPE_NULL crashed NSD when it printed it, arg was ZF_DNAME,
	  now ZF_UNKNOWN.
	- unknown rr test was faulty on input, the length was in nibbles
	  not in octets, but rfc specifies octets for unknown rrs.
	  NSD does not look at the length, and prints the length correctly.
	- added type NXT to the rr-test for weird RRs.
	- added printing test to rr-test, ipseckey and unknown-rr tests.
	  checks if NSD prints the same RR on output as it read in.
	- put -x option for nsd-patch in usage().
	- test that kills an nsd child server and checks that it is
	  restarted.

9 August 2006: Wouter
	- tested nsdc functionality, make install and make uninstall.
	- set O_NONBLOCKING on xfrd tcp sockets before the connect call,
	  because the handshaking can take very long too.
	- difffile and xfrdfile set via configure, to absolute pathnames,
	  so that chroot checks work for them.
	- updated tpkgs, they need to set relative paths now for diffile.
	- gcov says 2821 of 10617 total code lines are not covered.
	  compiled with --coverage, not -O2, ran tpkg/* and long/testplan*.
	  counted grep '#####:' *.gcov | wc and grep '^ *[0-9]*:' *.gcov | wc.
	- cleaned up the log functions, NSD no longer spams the syslog with
	  debug messages. The standard NSD debug util is used, -F -1 -L 2 for
	  a compile configured with --enable-checking will enable them again.
	  Errors are logged, as is the automated reload of a new serial.
	- tpkgs for bug077 and bug107 were silently failing to test properly.

8 August 2006: Wouter
	- fixes for checkconf test, more portable.
	- removed items from TODO that have been tested.