@@ -4,7 +4,7 @@
 nsd\-notify \- program to send NOTIFY's to remote nameservers
 .SH "SYNTAX"
 .LP 
-\fBnsd\-notify\fR [\fB-4\fR] [\fB-6\fR] [\fB-p\fR \fIport\fR] [\fB-y\fR \fIkey:secret\fR] \fB\-z\fR \fIzone\fR \fIservers\fR
+\fBnsd\-notify\fR [\fB-4\fR] [\fB-6\fR] [\fB-h\fR] [\fB-p\fR \fIport\fR] [\fB-y\fR \fIkey:secret\fR] \fB\-z\fR \fIzone\fR \fIservers\fR
 .SH "DESCRIPTION"
 .LP 
 nsd\-notify is simple program to send NOTIFY's to remoter nameservers.
@@ -18,6 +18,9 @@ Only send to IPv4 addresses.
 .TP
 \fB\-6\fR
 Only send to IPv6 addresses.
+.TP
+\fB\-h\fR
+Print help information and exit.
 .TP 
 \fB\-p\fR \fIport\fR
 Specify the port to send to.
