@@ -59,17 +59,17 @@ usage() {
 	echo "Usage: `basename $0` [-c configfile] {start|stop|reload|rebuild|restart|" >&2
 	echo "				running|update|notify|patch}" >&2
 	echo "options:" >&2
-	echo "	-c configfile	use specified configfile (default: @nsdconfigfile@)". >&2
+	echo "	-c configfile	Use specified configfile (default: @nsdconfigfile@)". >&2
 	echo "commands:" >&2
-	echo "	start:		start nsd server" >&2
-	echo "	stop:		stop nsd server" >&2
-	echo "	reload:		nsd server reloads database file" >&2
-	echo "	rebuild:	compile database file from zone files" >&2
-	echo "	restart:	stop the nsd server and start it again" >&2
-	echo "	running:	prints message and exit nonzero if server not running" >&2
-	echo "	update:		try to update all slave zones hosted on this server" >&2
-	echo "	notify:		send notify messages to all secondary servers" >&2
-	echo "	patch:		merge zone transfer changes back to zone files" >&2
+	echo "	start		Start nsd server." >&2
+	echo "	stop		Stop nsd server." >&2
+	echo "	reload		Nsd server reloads database file." >&2
+	echo "	rebuild		Compile database file from zone files." >&2
+	echo "	restart		Stop the nsd server and start it again." >&2
+	echo "	running		Prints message and exit nonzero if server not running." >&2
+	echo "	update		Try to update all slave zones hosted on this server." >&2
+	echo "	notify		Send notify messages to all secondary servers." >&2
+	echo "	patch		Merge zone transfer changes back to zone files." >&2
 }
 
 # check the config syntax before using it
